add_library(core STATIC
    core/HttpTracker.cpp
    core/Piece.cpp
    core/PieceStorage.cpp
    core/TorrentClient.cpp
    core/TorrentFile.cpp
    core/TorrentTask.cpp
    core/UdpTracker.cpp
    net/HttpClient.cpp
    net/Message.cpp
    net/PeerConnection.cpp
    net/TcpConnection.cpp
    net/UdpConnection.cpp
    utils/BencodeParser.cpp
    utils/byte_tools.cpp
    utils/Sha1.cpp
    utils/Timer.cpp
)

target_include_directories(core PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/..
)

target_include_directories(core PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/../include
)

add_executable(simple-torrent-tui
    main_tui.cpp
    ui/TorrentUi.cpp
)

target_include_directories(simple-torrent-tui PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/..
)

target_link_libraries(simple-torrent-tui
    core
    ftxui::component
)

install(TARGETS simple-torrent-tui
    DESTINATION bin
)
